src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationFloatAssignString.deca
{
	float x;
	x = "Hello";
	println(x);
}